docs/apache-airflow-providers-google/8.3.0/_sources/_api/airflow/providers/google/cloud/links/kubernetes_engine/index.rst.txt
:py:mod:`airflow.providers.google.cloud.links.kubernetes_engine`
================================================================

.. py:module:: airflow.providers.google.cloud.links.kubernetes_engine


Module Contents
---------------

Classes
~~~~~~~

.. autoapisummary::

   airflow.providers.google.cloud.links.kubernetes_engine.KubernetesEngineClusterLink
   airflow.providers.google.cloud.links.kubernetes_engine.KubernetesEnginePodLink




Attributes
~~~~~~~~~~

.. autoapisummary::

   airflow.providers.google.cloud.links.kubernetes_engine.KUBERNETES_BASE_LINK
   airflow.providers.google.cloud.links.kubernetes_engine.KUBERNETES_CLUSTER_LINK
   airflow.providers.google.cloud.links.kubernetes_engine.KUBERNETES_POD_LINK


.. py:data:: KUBERNETES_BASE_LINK
   :annotation: = https://console.cloud.google.com/kubernetes

   

.. py:data:: KUBERNETES_CLUSTER_LINK
   

   

.. py:data:: KUBERNETES_POD_LINK
   

   

.. py:class:: KubernetesEngineClusterLink

   Bases: :py:obj:`airflow.providers.google.cloud.links.base.BaseGoogleLink`

   Helper class for constructing Kubernetes Engine Cluster Link

   .. py:attribute:: name
      :annotation: = Kubernetes Cluster

      

   .. py:attribute:: key
      :annotation: = kubernetes_cluster_conf

      

   .. py:attribute:: format_str
      

      

   .. py:method:: persist(context, task_instance, cluster)
      :staticmethod:



.. py:class:: KubernetesEnginePodLink

   Bases: :py:obj:`airflow.providers.google.cloud.links.base.BaseGoogleLink`

   Helper class for constructing Kubernetes Engine Pod Link

   .. py:attribute:: name
      :annotation: = Kubernetes Pod

      

   .. py:attribute:: key
      :annotation: = kubernetes_pod_conf

      

   .. py:attribute:: format_str
      

      

   .. py:method:: persist(context, task_instance)
      :staticmethod:



