docs/apache-airflow-providers-google/10.24.0/_sources/_api/airflow/providers/google/cloud/links/kubernetes_engine/index.rst.txt
:py:mod:`airflow.providers.google.cloud.links.kubernetes_engine`
================================================================

.. py:module:: airflow.providers.google.cloud.links.kubernetes_engine


Module Contents
---------------

Classes
~~~~~~~

.. autoapisummary::

   airflow.providers.google.cloud.links.kubernetes_engine.KubernetesEngineClusterLink
   airflow.providers.google.cloud.links.kubernetes_engine.KubernetesEnginePodLink
   airflow.providers.google.cloud.links.kubernetes_engine.KubernetesEngineJobLink
   airflow.providers.google.cloud.links.kubernetes_engine.KubernetesEngineWorkloadsLink




Attributes
~~~~~~~~~~

.. autoapisummary::

   airflow.providers.google.cloud.links.kubernetes_engine.KUBERNETES_BASE_LINK
   airflow.providers.google.cloud.links.kubernetes_engine.KUBERNETES_CLUSTER_LINK
   airflow.providers.google.cloud.links.kubernetes_engine.KUBERNETES_POD_LINK
   airflow.providers.google.cloud.links.kubernetes_engine.KUBERNETES_JOB_LINK
   airflow.providers.google.cloud.links.kubernetes_engine.KUBERNETES_WORKLOADS_LINK


.. py:data:: KUBERNETES_BASE_LINK
   :value: '/kubernetes'

   

.. py:data:: KUBERNETES_CLUSTER_LINK

   

.. py:data:: KUBERNETES_POD_LINK

   

.. py:data:: KUBERNETES_JOB_LINK

   

.. py:data:: KUBERNETES_WORKLOADS_LINK

   

.. py:class:: KubernetesEngineClusterLink


   Bases: :py:obj:`airflow.providers.google.cloud.links.base.BaseGoogleLink`

   Helper class for constructing Kubernetes Engine Cluster Link.

   .. py:attribute:: name
      :value: 'Kubernetes Cluster'

      

   .. py:attribute:: key
      :value: 'kubernetes_cluster_conf'

      

   .. py:attribute:: format_str

      

   .. py:method:: persist(context, task_instance, cluster)
      :staticmethod:



.. py:class:: KubernetesEnginePodLink


   Bases: :py:obj:`airflow.providers.google.cloud.links.base.BaseGoogleLink`

   Helper class for constructing Kubernetes Engine Pod Link.

   .. py:attribute:: name
      :value: 'Kubernetes Pod'

      

   .. py:attribute:: key
      :value: 'kubernetes_pod_conf'

      

   .. py:attribute:: format_str

      

   .. py:method:: persist(context, task_instance)
      :staticmethod:



.. py:class:: KubernetesEngineJobLink


   Bases: :py:obj:`airflow.providers.google.cloud.links.base.BaseGoogleLink`

   Helper class for constructing Kubernetes Engine Job Link.

   .. py:attribute:: name
      :value: 'Kubernetes Job'

      

   .. py:attribute:: key
      :value: 'kubernetes_job_conf'

      

   .. py:attribute:: format_str

      

   .. py:method:: persist(context, task_instance)
      :staticmethod:



.. py:class:: KubernetesEngineWorkloadsLink


   Bases: :py:obj:`airflow.providers.google.cloud.links.base.BaseGoogleLink`

   Helper class for constructing Kubernetes Engine Workloads Link.

   .. py:attribute:: name
      :value: 'Kubernetes Workloads'

      

   .. py:attribute:: key
      :value: 'kubernetes_workloads_conf'

      

   .. py:attribute:: format_str

      

   .. py:method:: persist(context, task_instance)
      :staticmethod:



